import dedent from 'dedent';
import { ComparatorTest, createTest } from '../shared';

export const methodsCases: Record<string, ComparatorTest> = {
  'interface with method signatures': {
    interfaceName: 'Service',
    target: dedent/* ts */`
      export interface Service {
        getData(): string;
        setData(value: string): void;
      }`,
    source: dedent/* ts */`
      export interface Service {
        getData(): string;
        setData(value: string): void;
        clearData(): void;
      }`,
  },
  'external type accessed parameters': {
    interfaceName: 'EventHandler',
    expectsNoDiff: true,
    target: dedent/* ts */`
    export type EventArgs = [type: string, payload: unknown, timestamp: number];

    export interface EventHandler {
      notify(...args: EventArgs): void;
    }
  `,
    source: dedent/* ts */`
    export interface EventHandler {
      notify(e: unknown, t: unknown, n: number): void;
    }
  `,
  },
  'parameter added to existing method': {
    interfaceName: 'PopupManager',
    target: dedent/* ts */`
    export interface PopupManager {
      GetHeaderImages(appOverview: { appid: number }): string
    }
  `,
    source: dedent/* ts */`
    export interface PopupManager {
      GetHeaderImages(e: unknown, t: unknown): string
    }
  `,
  },
  'parameter removed from existing method': {
    interfaceName: 'PopupManager',
    target: dedent/* ts */`
    export interface PopupManager {
      GetHeaderImages(appOverview: { appid: number }, otherInfo: string): string
    }
  `,
    source: dedent/* ts */`
    export interface PopupManager {
      GetHeaderImages(e: unknown): string
    }
  `,
  },
  'parameter is typed array': {
    interfaceName: 'PopupManager',
    expectsNoDiff: true,
    target: dedent/* ts */`
    export interface PopupManager {
      GetOptions(options: string[]): string
    }
  `,
    source: dedent/* ts */`
    export interface PopupManager {
      GetOptions(e: unknown[]): string
    }
  `,
  },
  'parameter becomes optional': {
    interfaceName: 'PopupManager',
    target: dedent/* ts */`
    export interface PopupManager {
      GetOptions(options: string): string
    }
  `,
    source: dedent/* ts */`
    export interface PopupManager {
      GetOptions(e?: unknown): string
    }
  `,
  },
  'parameter has default null but is also string': {
    interfaceName: 'PopupManager',
    expectsNoDiff: true,
    target: dedent/* ts */`
    export interface PopupManager {
      GetOptions(options?: string | null): string
    }
  `,
    source: dedent/* ts */`
    export interface PopupManager {
      GetOptions(e?: null): string
    }
  `,
  },
  'parameter typed as enum number': {
    interfaceName: 'Foo',
    expectsNoDiff: true,
    target: dedent/* ts */`
    export interface Foo {
      GetOptions(options: EOptions): string
    }

    export enum EOptions {
      Option1,
      Option2,
    }
  `,
    source: dedent/* ts */`
    export interface Foo {
      GetOptions(e: number): string
    }
  `,
  },
  'parameter typed as enum string': {
    interfaceName: 'Foo',
    expectsNoDiff: true,
    target: dedent/* ts */`
    export interface Foo {
      GetOptions(options: EOptions): string
    }

    export enum EOptions {
      Option1 = 'Option1',
      Option2 = 'Option2',
    }
  `,
    source: dedent/* ts */`
    export interface Foo {
      GetOptions(e: string): string
    }
  `,
  },
  'parameter mismatch typed as enum': {
    interfaceName: 'Foo',
    target: dedent/* ts */`
    export interface Foo {
      GetOptions(options: EOptions): string
    }

    export enum EOptions {
      Option1,
      Option2,
    }
  `,
    source: dedent/* ts */`
    export interface Foo {
      GetOptions(e: string): string
    }
  `,
  },

  'parameter is generated spread in source, but target is just array': {
    interfaceName: 'Foo',
    expectsNoDiff: true,
    target: dedent/* ts */`
    export interface Foo {
      GetOptions(options: string[]): string
    }
  `,
    source: dedent/* ts */`
    export interface Foo {
      GetOptions(...e: unknown[]): string
    }
  `,
  },

  'parameter is generated spread in source, but target is just a type': {
    interfaceName: 'Foo',
    expectsNoDiff: true,
    target: dedent/* ts */`
    export interface Foo {
      GetOptions(options: string): string
    }
  `,
    source: dedent/* ts */`
    export interface Foo {
      GetOptions(...e: unknown[]): string
    }
  `,
  },

  'parameter is generated spread in source, but target has multiple parameters': {
    interfaceName: 'Foo',
    expectsNoDiff: true,
    target: dedent/* ts */`
    export interface Foo {
      GetOptions(options: number, otherInfo: string): string
    }
  `,
    source: dedent/* ts */`
    export interface Foo {
      GetOptions(...e: unknown[]): string
    }
  `,
  },
  'target optional method': {
    interfaceName: 'Foo',
    expectsNoDiff: true,
    target: dedent/* ts */`
    export interface Foo {
      GetOptions?(options: string): string
    }
  `,
    source: dedent/* ts */`
    export interface Foo {
      GetOptions(options: string): string
    }
  `,
  },
  'source optional method': {
    interfaceName: 'Foo',
    target: dedent/* ts */`
      export interface Foo {
        GetOptions(options: string): string
      }
    `,
    source: dedent/* ts */`
      export interface Foo {
        GetOptions?(options: string): string
      }
    `,
  },
  'source parameter has no type annotation': {
    interfaceName: 'Foo',
    expectsNoDiff: true,
    target: dedent/* ts */`
      export interface Foo {
        GetOptions(options: string): string
      }
    `,
    source: dedent/* ts */`
      export interface Foo {
        GetOptions(e): string
      }
    `,
  },
  'source rest parameter is not unknown array triggers else branch': {
    interfaceName: 'Foo',
    target: dedent/* ts */`
    export interface Foo {
      GetOptions(options: string): string
    }
  `,
    source: dedent/* ts */`
    export interface Foo {
      GetOptions(...e: string[]): string
    }
  `,
  },

  'method with jsdoc added from source': {
    interfaceName: 'Api',
    target: dedent/* ts */`
      export interface Api {
        id: number;
      }`,
    source: dedent/* ts */`
      export interface Api {
        id: number;

        /**
         * Does the thing.
         */
        DoThing(value: string): void;
      }`,
  },

  'optional property replaced when source declares method of same name': {
    interfaceName: 'Api',
    target: dedent/* ts */`
      export interface Api {
        foo?: string;
      }`,
    source: dedent/* ts */`
      export interface Api {
        foo(): void;
      }`,
  },
};

createTest('Methods', methodsCases);
