// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comparator Methods > interface with method signatures 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,4 +1,7 @@
export interface Service {
+  clearData(): void;
+
  getData(): string;
+
  setData(value: string): void;
}"
`;

exports[`Comparator Methods > method with jsdoc added from source 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,6 @@
export interface Api {
+  /** Does the thing. */
+  DoThing(value: string): void;
+
  id: number;
}"
`;

exports[`Comparator Methods > optional property replaced when source declares method of same name 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface Api {
-  foo?: string;
+  foo(): void;
}"
`;

exports[`Comparator Methods > parameter added to existing method 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface PopupManager {
-  GetHeaderImages(appOverview: { appid: number }): string
+  GetHeaderImages(appOverview: { appid: number }, t: unknown): string
}"
`;

exports[`Comparator Methods > parameter becomes optional 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface PopupManager {
-  GetOptions(options: string): string
+  GetOptions(options?: string): string
}"
`;

exports[`Comparator Methods > parameter mismatch typed as enum 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,7 +1,7 @@
export interface Foo {
-  GetOptions(options: EOptions): string
+  GetOptions(options: string): string
}

export enum EOptions {
  Option1,
  Option2,"
`;

exports[`Comparator Methods > parameter removed from existing method 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface PopupManager {
-  GetHeaderImages(appOverview: { appid: number }, otherInfo: string): string
+  GetHeaderImages(appOverview: { appid: number }): string
}"
`;

exports[`Comparator Methods > source optional method 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface Foo {
-  GetOptions(options: string): string
+  GetOptions?(options: string): string
}"
`;

exports[`Comparator Methods > source rest parameter is not unknown array triggers else branch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface Foo {
-  GetOptions(options: string): string
+  GetOptions(options: string[]): string
}"
`;
